feat: adds admin panel applications
