# apps/react-entrypoint/src/applications/react-app.ts
@@ -1,9 +1,0 @@
-export const reactApp = () => {
-  return {
-    bundleName: "app",
-    cssBundleName: "styles",
-    remoteOrigin: "http://localhost:8080",
-    proxyBasePath: "/external-app",
-    basePath: "/",
-  };
-};
